--- a/1_Data_Types/1_Intro_to_dtypes.ipynb
+++ b/1_Data_Types/1_Intro_to_dtypes.ipynb
@@ -50,8 +50,7 @@
     "x = 5\n",
     "y = 1.234\n",
     "print(type(x))\n",
-    "print(type(y))\n",
-    "\n"
+    "print(type(y))"
    ]
   },
   {
@@ -95,7 +94,7 @@
    "source": [
     "# Mapping\n",
     "x = {\"name\" : \"Niki\", \"age\" : 110}\n",
-    "print(type(x))\n"
+    "print(type(x))"
    ]
   },
   {
@@ -116,13 +115,6 @@
     "x = True\n",
     "print(type(x))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
