--- a/0_Introduction/05_Read_CSV.ipynb
+++ b/0_Introduction/05_Read_CSV.ipynb
@@ -2,23 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read CSV\n",
+    "# update file path to wherever you unzipped the file\n",
+    "df = pd.read_csv(r\"C:\\Users\\niki.reker\\.kaggle\\online_retail_ii.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Invoice StockCode                          Description  Quantity  \\\n",
+      "0  489434     85048  15CM CHRISTMAS GLASS BALL 20 LIGHTS        12   \n",
+      "1  489434    79323P                   PINK CHERRY LIGHTS        12   \n",
+      "2  489434    79323W                  WHITE CHERRY LIGHTS        12   \n",
+      "3  489434     22041         RECORD FRAME 7\" SINGLE SIZE         48   \n",
+      "4  489434     21232       STRAWBERRY CERAMIC TRINKET BOX        24   \n",
+      "\n",
+      "           InvoiceDate  Price  Customer ID         Country  \n",
+      "0  2009-12-01 07:45:00   6.95      13085.0  United Kingdom  \n",
+      "1  2009-12-01 07:45:00   6.75      13085.0  United Kingdom  \n",
+      "2  2009-12-01 07:45:00   6.75      13085.0  United Kingdom  \n",
+      "3  2009-12-01 07:45:00   2.10      13085.0  United Kingdom  \n",
+      "4  2009-12-01 07:45:00   1.25      13085.0  United Kingdom  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1067371 entries, 0 to 1067370\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count    Dtype  \n",
+      "---  ------       --------------    -----  \n",
+      " 0   Invoice      1067371 non-null  object \n",
+      " 1   StockCode    1067371 non-null  object \n",
+      " 2   Description  1062989 non-null  object \n",
+      " 3   Quantity     1067371 non-null  int64  \n",
+      " 4   InvoiceDate  1067371 non-null  object \n",
+      " 5   Price        1067371 non-null  float64\n",
+      " 6   Customer ID  824364 non-null   float64\n",
+      " 7   Country      1067371 non-null  object \n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 65.1+ MB\n",
+      "None\n",
+      "           Quantity         Price    Customer ID\n",
+      "count  1.067371e+06  1.067371e+06  824364.000000\n",
+      "mean   9.938898e+00  4.649388e+00   15324.638504\n",
+      "std    1.727058e+02  1.235531e+02    1697.464450\n",
+      "min   -8.099500e+04 -5.359436e+04   12346.000000\n",
+      "25%    1.000000e+00  1.250000e+00   13975.000000\n",
+      "50%    3.000000e+00  2.100000e+00   15255.000000\n",
+      "75%    1.000000e+01  4.150000e+00   16797.000000\n",
+      "max    8.099500e+04  3.897000e+04   18287.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# explore the data a bit to get familiar\n",
+    "print(df.info())\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice             0\n",
+      "StockCode           0\n",
+      "Description      4382\n",
+      "Quantity            0\n",
+      "InvoiceDate         0\n",
+      "Price               0\n",
+      "Customer ID    243007\n",
+      "Country             0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
